// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner renders the component 1`] = `
<div
  className="bber-spinner bber-spinner--visible"
>
  <div
    className="bber-spinner__detail"
  />
</div>
`;

exports[`Spinner renders the component 2`] = `
<div
  className="bber-spinner"
>
  <div
    className="bber-spinner__detail"
  />
</div>
`;
